2004-03-22  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: Correct order of do_init_daemon_vars and
	decide_orofile_devices.
	
2004-03-22  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: Tweak error messages and factor out common code.

2004-03-19  Anton Blanchard  <anton@samba.org>

	* daemon/opd_sfile.c: Add function name to some error messages

2004-03-04  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: tweak a bit error message.

2004-03-03  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: Support --dump for normal users.

2004-02-29  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp: make g++ -D_GLIBCXX_DEBUG happy, see
	  http://gcc.gnu.org/PR14340

	* module/op_dcache.h:
	* module/op_dname.c: some gcc version are confused by extern
	  declaration followed by later static.

2004-02-28  Zwane Mwaikambo  <zwane@linuxpower.ca>

	* libutil++/op_bfd.cpp:
	* utils/opcontrol: This patch fixes the listing of symbols within the
	  kernel image on ARM i was having. The problem was due to the fact
	  that ARM/Linux kernel text starts with a section called .init unlike
	  all the currently supported Linux architectures. So the solution is
	  to start at section 0

2004-02-28  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/op_syscalls.c: warning fix

2004-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/Makefile.am:
	* daemon/liblegacy/Makefile.am: force daemon build with frame pointer.
	  If daemon is built w/o frame pointer we get random arc, some of them
	  go in the vma used by an existing mmaped sample file, so cookie
	  lookup return a sample filename which is used as a from or to
	  component, this break pptools by creating invalid filename.  Note
	  this doesn't protect agaisnt a make CFLAGS=-fomit-frame-pointer.

	* libpp/callgraph_container.cpp: use the right {cg_}image_name for
	  verbose output.

2004-02-21  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_flags.h:
	* libpp/format_output.cpp: