@@ -1,3 +1,8 @@
+2004-03-22  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* module/ia64/op_pmu.c: the way to set pfm_syst_wide and
+	  pfm_dcr_pp changed between 2.4.19 and 2.4.20
+
 2004-03-22  Will Cohen  <wcohen@redhat.com>
 
 	* utils/opcontrol: Correct order of do_init_daemon_vars and
